package sokoban.model;

public enum CellValue {
    EMPTY, PLAYER, BOX, GOAL, GROUND, WALL
}
